Fix header alignment

--- a/src/css/AppHeader.scss
+++ b/src/css/AppHeader.scss
@@ -20,10 +20,11 @@
         flex-direction: row;
         
         a {
+
             margin: 0 16px;
             font-weight: 800;
             border-bottom: 6px solid #C1C1C1;
-            display: block;
+            display: inherit;
 
             &.selected {
                 border-color: #ffffff;
@@ -59,7 +60,6 @@
 
         .app-nav {
             a {
-                display: inherit;
                 font-size: 14px;
                 margin-left: 4px;
             }
